static/css/custom.css
/* ... */
/*
Forest mode
*/
.forest-mode {
    background-color: #A3C1AD;
    color: #1E3D22;
}

.forest-mode .dropdown-custom-theme {
    background-color: #507D60;
    color: #c7cec8;
}

.forest-mode .sidebar {
    background-color: #507D60;
    color: #1E3D22;
}

.forest-mode a {
    color: #ffffff;
}

.forest-mode a .btn {
    background-color: red;
}

/*
Pink mode
*/
.pink-mode {
    background-color: #FDE2E4;
    color: #882D60;
}

.pink-mode .sidebar {
    background-color: #F4C2C2;
    color: #882D60;
}

.pink-mode a {
    color: #9E5062;
}

.file-link {
    font: inherit;
    color: #0d6efd;
}

#themePreferencesForm {

}

.share-offcanvas-label {
    background-color: whitesmoke;
    color: black;
    font-weight: bold;
}

.toast-body {
    font-weight: 450;
}

.page-item.disabled .page-link {
    background-color: #f7f7f7;
}

/* Height of main page*/
.min-vh-100 {
    min-height: 94vh !important; /*the side bar will extended if the vh is set to 100*/
}

.min-h-screen {
    min-height: 91vh !important;
}

body{
    overflow: hidden; /* hide the main page scrollbar*/
}

